0.11.0

- Reward from Quicksilver Synthesis Companion
- Better controller icon system
  - e.g. Boltcaster description now shows keys based on platform better
  - You can now change the platform from the page