@@ -7,6 +7,7 @@ $expAlphaThemed: "NMSExpeditionAlphabet", Helvetica, sans-serif !important;
 @import "./custom/segmentedControl";
 @import "./custom/nmsfmPresenter";
 @import "./custom/weekendMissionMenu";
+@import "./custom/timeline";
 @import "./custom/tree";
 @import "./custom/chip";
 @import "./custom/guide";
