@@ -1,0 +1,9 @@
+.generic-item-list {
+    .gen-item.qs-timeline > .gen-item-container {
+        .gen-item-content-container {
+            .text-container {
+                padding-top: 0.1em;
+            }
+        }
+    }
+}
