@@ -4,3 +4,4 @@
 - Better controller icon system
   - e.g. Boltcaster description now shows keys based on platform better
   - You can now change the platform from the page
+- Show Quicksilver prices on Community Mission Timeline page
